Add upstream's recommended java options